# vision_internal

./: .gitignore  CMakeLists.txt  build_3rdparty.sh  vision-internal.qbs
Autofocus/: Autofocus.qbs  CMakeLists.txt  main.cpp
BackgroundRecognition/: BackgroundRecognition.qbs  CMakeLists.txt  main.cpp
Core/: AverageCalculator.cpp  AverageCalculator.h  CMakeLists.txt  ComponentMarker.cpp  ComponentMarker.h  Core.qbs  ImageProcessor.cpp  ImageProcessor.h  MathItemGenerator.cpp  MathItemGenerator.h  Statistics.cpp  Statistics.h  TraceFinder.cpp  TraceFinder.h  Utility.cpp  Utility.h  functions.cpp  functions.h  trace.h  types.h
Countours/: CMakeLists.txt  Countours.qbs  HistogramModaCalculator.cpp  HistogramModaCalculator.h  SingularPointsFinder.cpp  SingularPointsFinder.h  main.cpp
Metrics/: CMakeLists.txt  main.cpp
