cmake_minimum_required (VERSION 2.6)

project (VisionInternal)

if (CMAKE_COMPILER_IS_GNUCXX)
    if (WIN32)
        message ("Compiler - mingw")
        set(3RDPARTY_LIBS "mingw/lib")
    else()
        message (FATAL_ERROR "unavaliable OS" )
    endif()
elseif (MSVC)
    if (MSVC_VERSION GREATER_EQUAL 1500)
        message ("Compiler - vc15")
        set (3RDPARTY_LIBS "vc15/lib")
    else()
        message (FATAL_ERROR "unavaliable Visual Studio version")
    endif()
endif()

find_library (OpenCVWorld-Debug opencv_world400d PATHS 3rdparty-build-Debug/x64/${3RDPARTY_LIBS})
find_library (OpenCVWorld-Release opencv_world400 PATHS 3rdparty-build-Release/x64/${3RDPARTY_LIBS})

add_subdirectory (Core)
add_subdirectory (Countours)